src/test/ui/issue-30007.stderr
error: macro expansion ignores token `;` and any following
  --> $DIR/issue-30007.rs:12:20
   |
LL |     () => ( String ; );     //~ ERROR macro expansion ignores token `;`
   |                    ^
   |
note: caused by the macro expansion here; the usage of `t!` is likely invalid in type context
  --> $DIR/issue-30007.rs:16:16
   |
LL |     let i: Vec<t!()>;
   |                ^^^^

error: aborting due to previous error

